@@ -1,4 +1,5 @@
 0.02
+ - Update example output.
 
 0.01 2023-06-23T18:24:33+02:00
  - First version.
